Fix dark mode tree rendering with bottom fade mask

--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@ a:hover {
   user-select: none;
   clip-path: inset(100% 0 0 0);
   transform-origin: bottom center;
+  -webkit-mask-image: linear-gradient(to bottom, black 55%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 55%, transparent 100%);
 }
 
 @keyframes tree-reveal {
